tests/paczka1/fuzzy1/43852834.err
Error in line 1: A570 A561 60,2
Error in line 2: A570 A570 89,3
Error in line 3: LEQkVr9pz4 A561 92,4
Error in line 12: s8FWexdgjVn A710 58,7
Error in line 4: A570 A101 92,6
Error in line 28: PHKs A561 33,2
Error in line 33: LEQkVr9pz4 A570 88,0
